[fix] checkbox contrast, new result margin and detail modal top

--- a/src/css/searxng-rtl.css
+++ b/src/css/searxng-rtl.css
@@ -892,7 +892,7 @@ html {
   --color-toolkit-select-border-hover: #bbb;
   --color-toolkit-checkbox-onoff-background: #dfe1e5;
   --color-toolkit-checkbox-onoff-label-background: #1a73e8;
-  --color-toolkit-checkbox-onoff-checked-background: #dfe1e5;
+  --color-toolkit-checkbox-onoff-checked-background: #4d5156;
   --color-toolkit-checkbox-label-background: #fff;
   --color-toolkit-checkbox-label-border: #f2f2f2;
   --color-toolkit-checkbox-input-border: #1a73e8;
@@ -2011,7 +2011,7 @@ article.result-images .detail {
   position: fixed;
   left: 60rem;
   right: 0;
-  top: 8.75rem;
+  top: 8.1rem;
   transition: top 0.064s ease-in 0s;
   bottom: 0;
   background: var(--color-result-detail-background);
@@ -2797,7 +2797,7 @@ article[data-vim-selected].category-social {
 .category-files,
 .category-social {
   border: 1px solid var(--color-result-border);
-  margin: 1rem 0;
+  margin: 1rem 0 1rem 1.2rem;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
@@ -2958,7 +2958,7 @@ article[data-vim-selected].category-social {
   border: 1px solid var(--color-answer-border);
   background: var(--color-answer-background);
   padding: 1rem;
-  margin: 1rem 0.5rem;
+  margin: 1rem 0;
   margin-top: 0;
   color: var(--color-answer-font);
   -webkit-border-radius: 10px;
